# telecodex

./: AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_new.md  pyproject.toml
.github/: change_version.py
.github/workflows/: publish-dev.yml  publish-main.yml  publish.yml  test.yml
telecodex/: __init__.py  __main__.py  codex_client.py  status_formatting.py  telegram_handlers.py
tests/: test_demo.py
