[build-system]
requires = ["setuptools>=69.5.0,<80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telecodex"
authors = [{name="Filipe Pina", email="shelf-corncob-said@duck.com" }]
dynamic = ["version"]
description = "Telegram bot bridge for codex app-server over stdio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "classyclick",
    "platformdirs",
    "python-telegram-bot",
    "tomli; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "build",
    "pytest",
    "pytest-cov",
    "pytest-socket",
    "ruff",
    "twine",
]

[project.urls]
Homepage = "https://github.com/fopina/telecodex"
Repository = "https://github.com/fopina/telecodex"

[project.scripts]
telecodex = "telecodex.__main__:main"

[tool.setuptools.packages.find]
include = ["telecodex*"]

[tool.setuptools.dynamic]
version = {attr = "telecodex.__version__"}

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --disable-socket"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["telecodex"]

[tool.coverage.report]
show_missing = true
skip_covered = true
